--- a/test2/test2.html
+++ b/test2/test2.html
@@ -6,18 +6,20 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <label for="visa">Visa</label>
-        <input type="radio" id="visa" name="card"><br>
-        <label for="mastercard">Mastercard</label>
-        <input type="radio" name="card" id="mastercard"><br>
-        <label for="verve">Verve</label>
-        <input type="radio" name="card" id="verve"><br>
-        
+   <div>
+    <label for="">Mastercard </label>
+    <input name="card" type="radio" id="mastercard"><br>
+    <label for="">Verve </label>
+    <input name="card" type="radio" id="verve"><br>
+    <label for="">Visa </label>
+    <input name="card" type="radio" id="visa"><br>
+    
+    <button onclick="submit()">Submit</button><br>
+    <input type="text">
 
-        <button onclick='submit()'>Submit</button>
-    </div>
 
-    <script src="test2.js"></script>
+
+   </div>
+    <script src="../callback.js"></script>
 </body>
 </html>
